// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchoolCard should render properly with all props assigned 1`] = `
<a
  className="cardLinkOverrides"
  href="https://www.codeplatoon.org"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  <article
    className="Card SchoolCard animatedCard"
  >
    <template
      className="content"
    >
      <img
        alt="Code Platoon Logo"
        className="logo"
        src="undefinedcodeSchoolLogos/code_platoon.jpg"
      />
      <section
        className="schoolCardText"
      >
        <h5
          className="name"
        >
          Code Platoon
        </h5>
        <address
          className="location"
        >
          Chicago, 
          IL
        </address>
        <ul
          className="info"
        >
          <li>
            GI Bill Accepted: 
            <b>
              Yes
            </b>
          </li>
          <li>
            Commitment: 
            <b>
              Full-Time
            </b>
          </li>
          <li>
            Hardware Included: 
            <b>
              No
            </b>
          </li>
        </ul>
      </section>
    </template>
  </article>
</a>
`;

exports[`SchoolCard should render properly with all required assigned 1`] = `
<a
  className="cardLinkOverrides"
  href="https://www.codeplatoon.org/not-real"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  <article
    className="Card SchoolCard animatedCard"
  >
    <template
      className="content"
    >
      <img
        alt="Code Platoon Fake Logo"
        className="logo"
        src="undefinedcodeSchoolLogos/code_platoon.jpg"
      />
      <section
        className="schoolCardText"
      >
        <h5
          className="name"
        >
          Code Platoon Fake
        </h5>
        <address
          className="location"
        />
        <ul
          className="info"
        >
          <li>
            GI Bill Accepted: 
            <b>
              No
            </b>
          </li>
          <li>
            Commitment: 
            <b>
              Flexible
            </b>
          </li>
          <li>
            Hardware Included: 
            <b>
              Yes
            </b>
          </li>
        </ul>
      </section>
    </template>
  </article>
</a>
`;
